[gd_scene load_steps=4 format=3 uid="uid://dswu5048qtluq"]

[ext_resource type="PackedScene" uid="uid://b0of1wdngjaup" path="res://menu.tscn" id="1_g5xth"]
[ext_resource type="Script" uid="uid://c3phutxv0b4qv" path="res://main.gd" id="1_rfxpo"]
[ext_resource type="Texture2D" uid="uid://b5sppaytfyvjg" path="res://icon.svg" id="3_h2yge"]

[node name="Node" type="Node"]
script = ExtResource("1_rfxpo")

[node name="Menu" parent="." instance=ExtResource("1_g5xth")]

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("3_h2yge")

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("uid://c8fkdhc1b1syb")
spawn_path = NodePath("..")

[connection signal="pressed" from="Menu/Main/HBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Menu/Main/HBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Menu/vs1/HBoxContainer/host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Menu/vs1/HBoxContainer/join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="Menu/vs1/HBoxContainer/bot" to="." method="_on_bot_pressed"]

[editable path="Menu"]
